src/test/ui/consts/min_const_fn/cmp_fn_pointers.stderr
error[E0723]: function pointers in const fn are unstable
  --> $DIR/cmp_fn_pointers.rs:1:14
   |
LL | const fn cmp(x: fn(), y: fn()) -> bool {
   |              ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
